# AutoTests

./: .env.example  .gitignore  DISCREPANCIES.md  README.md  pyproject.toml
OpenAPI/: accounting-openapi.json  crm-openapi.json
artifacts/: coverage_matrix.csv  coverage_matrix.json  failed_tests.json  observed_responses.jsonl
configs/: settings.py
dreamcrm_openapi_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fixtures/: customer_actions.json  customers.json  orders.json  products.json
nginx/: dreamcrm-dashboard.conf
reports/: availability.html  index.html
scripts/: availability_monitor.py  build_availability_report.py  build_observation_report.py  get_site_token.py  install_server.sh  run_and_open_report.ps1  run_and_open_report.py  setup_cron.sh
tests/: conftest.py
tests/accounting/: test_bonuses.py  test_gift_certificates.py  test_orders.py  test_products.py  test_promotions.py
tests/contract/: test_accounting_contract.py  test_back_content_contract.py  test_crm_contract.py  test_openapi_schema.py
tests/crm/: test_customer_actions.py  test_customer_search.py  test_customer_search_regressions.py  test_customers.py
tests/full/: test_openapi_live_requests.py
tests/negative/: test_auth.py  test_boundaries.py  test_validation.py
tests/smoke/: test_health_ping.py
utils/: api_client.py  observability.py  openapi.py  payload_pruner.py  test_data.py  validators.py
